--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <div class="allPage">
       <div class="pageFontAgeo">
         <div class="pageMenuBar">
-          <div class="leftMenuBar">
-            <img src="images/Logo (1).svg" alt="" />
+          <img src="images/Logo (1).svg" alt="" />
+          <div class="right">
             <div class="listItems">
               <div class="item">Home</div>
               <div>About Us</div>
               <div>Our App</div>
               <div>Contacts</div>
             </div>
-          </div>
-          <div class="rightMenuBar">
-            <div>Log in</div>
-            <div class="btnSignUp">Sign Up</div>
+            <div class="btnMenuBar">
+              <div>Log in</div>
+              <div class="btnSignUp">Sign Up</div>
+            </div>
           </div>
         </div>
         <div class="pageTitle">
@@ -56,40 +56,42 @@
             <img class="img" src="images/banner-r.svg" alt="" />
           </div>
         </div>
-        <div class="pageName">
-          <div class="mainTitle">SERVICE</div>
-          <div class="description">Our Vison & Our Goal</div>
-        </div>
-        <div class="listServiceTags">
-          <div class="tag">
-            <img class="img" src="images/blackIcon1.svg" alt="" />
-            <div class="tagName">Graphic Design</div>
-            <div class="tagDescription">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-              dui mi, bibendum eu erat id, ultricies semper metus. Nunc dapibus
-              laoreet dolor nec imperdiet.
-            </div>
-            <div class="tagBtn">Learn More</div>
+        <div class="container">
+          <div class="pageName">
+            <div class="mainTitle">SERVICE</div>
+            <div class="description">Our Vison & Our Goal</div>
           </div>
-          <div class="tag">
-            <img class="img" id="img1" src="images/blackIcon3.svg" alt="" />
-            <div class="tagName">Video Editing</div>
-            <div class="tagDescription">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-              dui mi, bibendum eu erat id, ultricies semper metus. Nunc dapibus
-              laoreet dolor nec imperdiet.
+          <div class="listServiceTags">
+            <div class="tag">
+              <img class="img" src="images/blackIcon1.svg" alt="" />
+              <div class="tagName">Graphic Design</div>
+              <div class="tagDescription">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                dui mi, bibendum eu erat id, ultricies semper metus. Nunc
+                dapibus laoreet dolor nec imperdiet.
+              </div>
+              <div class="tagBtn">Learn More</div>
             </div>
-            <div class="tagBtn">Learn More</div>
-          </div>
-          <div class="tag">
-            <img class="img" src="images/blackIcon2.svg" alt="" />
-            <div class="tagName">Digital Marketing</div>
-            <div class="tagDescription">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-              dui mi, bibendum eu erat id, ultricies semper metus. Nunc dapibus
-              laoreet dolor nec imperdiet.
+            <div class="tag">
+              <img class="img" id="img1" src="images/blackIcon3.svg" alt="" />
+              <div class="tagName">Video Editing</div>
+              <div class="tagDescription">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                dui mi, bibendum eu erat id, ultricies semper metus. Nunc
+                dapibus laoreet dolor nec imperdiet.
+              </div>
+              <div class="tagBtn">Learn More</div>
             </div>
-            <div class="tagBtn">Learn More</div>
+            <div class="tag">
+              <img class="img" src="images/blackIcon2.svg" alt="" />
+              <div class="tagName">Digital Marketing</div>
+              <div class="tagDescription">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                dui mi, bibendum eu erat id, ultricies semper metus. Nunc
+                dapibus laoreet dolor nec imperdiet.
+              </div>
+              <div class="tagBtn">Learn More</div>
+            </div>
           </div>
         </div>
       </div>
@@ -157,66 +159,70 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <div class="pageName">
+            <div class="mainTitle">OUR TEAM</div>
+            <div class="description">Meet The Team</div>
+          </div>
+          <div class="listOurTeamTags">
+            <div class="tag">
+              <div class="user">
+                <img class="userPicture" src="images/Mask (3).svg" alt="" />
+                <div class="name">Vanessa Laird</div>
+                <div class="position">UI Designer</div>
+              </div>
+              <div class="icon">
+                <img class="img1" src="images/fa-twitter.svg" alt="" />
+                <img class="img2" src="images/fa-facebook.svg" alt="" />
+                <img class="img3" src="images/fa-dribbble.svg" alt="" />
+              </div>
+            </div>
+            <div class="tag">
+              <div class="user">
+                <img class="userPicture" src="images/Mask (1).svg" alt="" />
+                <div class="name">Mason Campbell</div>
+                <div class="position">UI Designer</div>
+              </div>
+              <div class="icon">
+                <img class="img1" src="images/fa-twitter.svg" alt="" />
+                <img class="img2" src="images/fa-facebook.svg" alt="" />
+                <img class="img3" src="images/fa-dribbble.svg" alt="" />
+              </div>
+            </div>
+            <div class="tag">
+              <div class="user">
+                <img class="userPicture" src="images/Mask (2).svg" alt="" />
+                <div class="name">Irea Evans</div>
+                <div class="position">Client Manager</div>
+              </div>
+              <div class="icon">
+                <img class="img1" src="images/fa-twitter.svg" alt="" />
+                <img class="img2" src="images/fa-facebook.svg" alt="" />
+                <img class="img3" src="images/fa-dribbble.svg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
         <div class="pageName">
           <div class="mainTitle">OUR TEAM</div>
-          <div class="description">Meet The Team</div>
+          <div class="description">Subscribe Our Newsleter</div>
         </div>
-        <div class="listOurTeamTags">
-          <div class="tag">
-            <div class="user">
-              <img class="userPicture" src="images/Mask (3).svg" alt="" />
-              <div class="name">Vanessa Laird</div>
-              <div class="position">UI Designer</div>
-            </div>
-            <div class="icon">
-              <img class="img1" src="images/fa-twitter.svg" alt="" />
-              <img class="img2" src="images/fa-facebook.svg" alt="" />
-              <img class="img3" src="images/fa-dribbble.svg" alt="" />
-            </div>
-          </div>
-          <div class="tag">
-            <div class="user">
-              <img class="userPicture" src="images/Mask (1).svg" alt="" />
-              <div class="name">Mason Campbell</div>
-              <div class="position">UI Designer</div>
-            </div>
-            <div class="icon">
-              <img class="img1" src="images/fa-twitter.svg" alt="" />
-              <img class="img2" src="images/fa-facebook.svg" alt="" />
-              <img class="img3" src="images/fa-dribbble.svg" alt="" />
-            </div>
-          </div>
-          <div class="tag">
-            <div class="user">
-              <img class="userPicture" src="images/Mask (2).svg" alt="" />
-              <div class="name">Irea Evans</div>
-              <div class="position">Client Manager</div>
-            </div>
-            <div class="icon">
-              <img class="img1" src="images/fa-twitter.svg" alt="" />
-              <img class="img2" src="images/fa-facebook.svg" alt="" />
-              <img class="img3" src="images/fa-dribbble.svg" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="pageName">
-        <div class="mainTitle">OUR TEAM</div>
-        <div class="description">Subscribe Our Newsleter</div>
-      </div>
-      <div class="pageFontRoboto">
-        <div class="content">
-          <img src="images/Group.svg" alt="" />
-          <div class="contentText">
-            <div class="text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam
-            </div>
-            <div class="btn">
-              <div class="boxYourE-mailHere">Your E-mail here...</div>
-              <div class="btnSubscribeOurNewsletter">
-                Subscribe Our Newsletter
+        <div class="pageFontRoboto">
+          <div class="content">
+            <img src="images/Group.svg" alt="" />
+            <div class="contentText">
+              <div class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam
+              </div>
+              <div class="btn">
+                <div class="boxYourE-mailHere">Your E-mail here...</div>
+                <div class="btnSubscribeOurNewsletter">
+                  Subscribe Our Newsletter
+                </div>
               </div>
             </div>
           </div>
