--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="pageFontAgeo">
         <div class="pageMenuBar">
           <img src="images/Logo (1).svg" alt="" />
-          <div class="right">
+          <div class="rightMenuBar">
             <div class="listItems">
               <div class="item">Home</div>
               <div>About Us</div>
