--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
               </div>
             </div>
           </div>
-          <div>
-            <img class="img" src="images/banner-r.svg" alt="" />
-          </div>
+          <img class="img" src="images/Group 27.svg" alt="" />
         </div>
         <div class="container">
           <div class="pageName">
